--- a/index.html
+++ b/index.html
@@ -4,10 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/index.js"></script>
-    <title>Rock Paper Scissors</title>
+    <script src="/index.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <title>ROCK PAPER SCISSOR</title>
+    </header>
+
+    <main class="main">
+        <div class="buttons">
+            <button id="rock" value="rock" class="btn">Rock</button>
+            <button id="paper" value="paper" class="btn">Paper</button>
+            <button id="scissor" value="scissors" class="btn">Scissor</button>       
+        </div>
+
+        <div class="score-container">
+            <div class="player-score-box">
+                <p class="player-score" id="player-score"></p>
+            </div>
+            <div class="computer-score-box">
+                <p class="computer-score" id="computer-score"></p>
+            </div>
+        </div>
+
+        <div class="win-container">
+            <p id="round-winner"></p>
+        </div>
+    </main>
+
+
+    <p id="status"></p>
     
+
 </body>
 </html>
