added reset button

--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
             </div>
         </div>
 
+        <p id="status"></p>
+
         <div class="win-container">
             <p id="round-winner"></p>
+            <button id="reset" class="reset" hidden>Restart</button>
         </div>
     </main>
 
-
-    <p id="status"></p>
+    
     
 
 </body>
