--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </script>
             Amruth Kiran
         </p>
-        <a href="" target="_blank">
+        <a href="https://github.com/FrootPunchSamurai" target="_blank">
             <i class="fab fa-github"></i></a>
     </footer>
 
