--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/index.js" defer></script>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/4c536a6bd5.js" crossorigin="anonymous"></script>
+    <script
+    src="https://kit.fontawesome.com/4c536a6bd5.js"
+    crossorigin="anonymous"
+  ></script>
 </head>
-
 <body>
     <header>
         <title>ROCK PAPER SCISSOR</title>
@@ -20,9 +21,8 @@
         <div class="buttons">
             <button id="rock" value="rock" class="btn">✊</button>
             <button id="paper" value="paper" class="btn">✋</button>
-            <button id="scissor" value="scissors" class="btn">✌️</button>
+            <button id="scissor" value="scissors" class="btn">✌️</button>       
         </div>
-
 
         <div class="score-container">
             <div class="player-score-box">
@@ -43,15 +43,17 @@
 
     <footer class="footer">
         <p>
-            <script>
-                document.write(new Date().getFullYear())
-            </script>
-            Amruth Kiran
+          <script>
+            document.write(new Date().getFullYear())
+          </script>
+          Amruth Kiran
         </p>
-        <a href="https://github.com/FrootPunchSamurai" target="_blank">
-            <i class="fab fa-github"></i></a>
-    </footer>
+        <a href="" target="_blank">
+          <i class="fab fa-github"></i
+        ></a>
+      </footer>
+    
+    
 
 </body>
-
 </html>
