minor style changes

--- a/index.html
+++ b/index.html
@@ -43,14 +43,13 @@
 
     <footer class="footer">
         <p>
-          <script>
-            document.write(new Date().getFullYear())
-          </script>
-          Amruth Kiran
-        </p>
-        <a href="" target="_blank">
-          <i class="fab fa-github"></i
-        ></a>
+            <script>
+              document.write(new Date().getFullYear())
+            </script>
+          </p>
+          <a href="" target="_blank">Amruth Kiran
+            <i class="fab fa-github"></i
+          ></a>
       </footer>
     
     
